Semestre 06/INF01147 - Compiladores B/Trabalho/etapa3/inf01147_compiladores/y.output
   0  $accept : begin $end

   1  begin : program

   2  program : decl program
   3          | decl
   4          | func program
   5          | func

   6  decl : simple_decl
   7       | array_decl
   8       | pointer_decl

   9  simple_decl : types identifier ':' literals ';'

  10  identifier : TK_IDENTIFIER

  11  types : KW_WORD
  12        | KW_BOOL
  13        | KW_BYTE

  14  literals : LIT_INTEGER
  15           | LIT_FALSE
  16           | LIT_TRUE
  17           | LIT_CHAR
  18           | LIT_STRING

  19  array_decl : types identifier '[' LIT_INTEGER ']' ';'
  20             | types identifier '[' LIT_INTEGER ']' ':' lit_list ';'

  21  lit_list : literals lit_list
  22           | literals

  23  pointer_decl : types '$' identifier ':' literals ';'

  24  func : types identifier '(' param_list ')' decl_func_list command_block
  25       | types identifier '(' ')' decl_func_list command_block
  26       | types identifier '(' param_list ')' command_block
  27       | types identifier '(' ')' command_block

  28  param_list : types identifier ',' param_list
  29             | types identifier

  30  decl_func_list : simple_decl decl_func_list
  31                 | pointer_decl decl_func_list
  32                 | simple_decl
  33                 | pointer_decl

  34  command_block : '{' command_list '}'

  35  command_list : command ';' command_list
  36               |

  37  command : identifier '=' exp
  38          | identifier '[' LIT_INTEGER ']' '=' exp
  39          | KW_IF '(' exp ')' KW_THEN command
  40          | KW_IF '(' exp ')' KW_THEN command KW_ELSE command
  41          | KW_LOOP '(' exp ')' command
  42          | KW_INPUT identifier
  43          | KW_OUTPUT output_list
  44          | KW_RETURN exp
  45          | command_block

  46  output_list : exp_arit ',' output_list
  47              | exp_arit

  48  func_call : identifier '(' func_call_list ')'
  49            | identifier '(' ')'

  50  func_call_list : exp ',' func_call_list
  51                 | exp

  52  exp : exp_arit
  53      | exp_logic
  54      | func_call
  55      | '-' exp
  56      | '*' exp
  57      | '&' exp
  58      | '(' exp ')'

  59  exp_arit : exp '+' exp
  60           | exp '-' exp
  61           | exp '/' exp
  62           | exp '*' exp
  63           | literals
  64           | identifier
  65           | identifier '[' LIT_INTEGER ']'

  66  exp_logic : exp OPERATOR_LE exp
  67            | exp OPERATOR_GE exp
  68            | exp OPERATOR_EQ exp
  69            | exp OPERATOR_NE exp
  70            | exp OPERATOR_OR exp
  71            | exp OPERATOR_AND exp
  72            | exp '>' exp
  73            | exp '<' exp

state 0
	$accept : . begin $end  (0)

	KW_WORD  shift 1
	KW_BOOL  shift 2
	KW_BYTE  shift 3
	.  error

	begin  goto 4
	program  goto 5
	decl  goto 6
	simple_decl  goto 7
	array_decl  goto 8
	pointer_decl  goto 9
	func  goto 10
	types  goto 11


state 1
	types : KW_WORD .  (11)

	.  reduce 11


state 2
	types : KW_BOOL .  (12)

	.  reduce 12


state 3
	types : KW_BYTE .  (13)

	.  reduce 13


state 4
	$accept : begin . $end  (0)

	$end  accept


state 5
	begin : program .  (1)

	.  reduce 1


state 6
	program : decl . program  (2)
	program : decl .  (3)

	KW_WORD  shift 1
	KW_BOOL  shift 2
	KW_BYTE  shift 3
	$end  reduce 3

	program  goto 12
	decl  goto 6
	simple_decl  goto 7
	array_decl  goto 8
	pointer_decl  goto 9
	func  goto 10
	types  goto 11


state 7
	decl : simple_decl .  (6)

	.  reduce 6


state 8
	decl : array_decl .  (7)

	.  reduce 7


state 9
	decl : pointer_decl .  (8)

	.  reduce 8


state 10
	program : func . program  (4)
	program : func .  (5)

	KW_WORD  shift 1
	KW_BOOL  shift 2
	KW_BYTE  shift 3
	$end  reduce 5

	program  goto 13
	decl  goto 6
	simple_decl  goto 7
	array_decl  goto 8
	pointer_decl  goto 9
	func  goto 10
	types  goto 11


state 11
	simple_decl : types . identifier ':' literals ';'  (9)
	array_decl : types . identifier '[' LIT_INTEGER ']' ';'  (19)
	array_decl : types . identifier '[' LIT_INTEGER ']' ':' lit_list ';'  (20)
	pointer_decl : types . '$' identifier ':' literals ';'  (23)
	func : types . identifier '(' param_list ')' decl_func_list command_block  (24)
	func : types . identifier '(' ')' decl_func_list command_block  (25)
	func : types . identifier '(' param_list ')' command_block  (26)
	func : types . identifier '(' ')' command_block  (27)

	TK_IDENTIFIER  shift 14
	'$'  shift 15
	.  error

	identifier  goto 16


state 12
	program : decl program .  (2)

	.  reduce 2


state 13
	program : func program .  (4)

	.  reduce 4


state 14
	identifier : TK_IDENTIFIER .  (10)

	.  reduce 10


state 15
	pointer_decl : types '$' . identifier ':' literals ';'  (23)

	TK_IDENTIFIER  shift 14
	.  error

	identifier  goto 17


state 16
	simple_decl : types identifier . ':' literals ';'  (9)
	array_decl : types identifier . '[' LIT_INTEGER ']' ';'  (19)
	array_decl : types identifier . '[' LIT_INTEGER ']' ':' lit_list ';'  (20)
	func : types identifier . '(' param_list ')' decl_func_list command_block  (24)
	func : types identifier . '(' ')' decl_func_list command_block  (25)
	func : types identifier . '(' param_list ')' command_block  (26)
	func : types identifier . '(' ')' command_block  (27)

	':'  shift 18
	'['  shift 19
	'('  shift 20
	.  error


state 17
	pointer_decl : types '$' identifier . ':' literals ';'  (23)

	':'  shift 21
	.  error


state 18
	simple_decl : types identifier ':' . literals ';'  (9)

	LIT_INTEGER  shift 22
	LIT_FALSE  shift 23
	LIT_TRUE  shift 24
	LIT_CHAR  shift 25
	LIT_STRING  shift 26
	.  error

	literals  goto 27


state 19
	array_decl : types identifier '[' . LIT_INTEGER ']' ';'  (19)
	array_decl : types identifier '[' . LIT_INTEGER ']' ':' lit_list ';'  (20)

	LIT_INTEGER  shift 28
	.  error


state 20
	func : types identifier '(' . param_list ')' decl_func_list command_block  (24)
	func : types identifier '(' . ')' decl_func_list command_block  (25)
	func : types identifier '(' . param_list ')' command_block  (26)
	func : types identifier '(' . ')' command_block  (27)

	KW_WORD  shift 1
	KW_BOOL  shift 2
	KW_BYTE  shift 3
	')'  shift 29
	.  error

	param_list  goto 30
	types  goto 31


state 21
	pointer_decl : types '$' identifier ':' . literals ';'  (23)

	LIT_INTEGER  shift 22
	LIT_FALSE  shift 23
	LIT_TRUE  shift 24
	LIT_CHAR  shift 25
	LIT_STRING  shift 26
	.  error

	literals  goto 32


state 22
	literals : LIT_INTEGER .  (14)

	.  reduce 14


state 23
	literals : LIT_FALSE .  (15)

	.  reduce 15


state 24
	literals : LIT_TRUE .  (16)

	.  reduce 16


state 25
	literals : LIT_CHAR .  (17)

	.  reduce 17


state 26
	literals : LIT_STRING .  (18)

	.  reduce 18


state 27
	simple_decl : types identifier ':' literals . ';'  (9)

	';'  shift 33
	.  error


state 28
	array_decl : types identifier '[' LIT_INTEGER . ']' ';'  (19)
	array_decl : types identifier '[' LIT_INTEGER . ']' ':' lit_list ';'  (20)

	']'  shift 34
	.  error


state 29
	func : types identifier '(' ')' . decl_func_list command_block  (25)
	func : types identifier '(' ')' . command_block  (27)

	KW_WORD  shift 1
	KW_BOOL  shift 2
	KW_BYTE  shift 3
	'{'  shift 35
	.  error

	simple_decl  goto 36
	pointer_decl  goto 37
	decl_func_list  goto 38
	command_block  goto 39
	types  goto 40


state 30
	func : types identifier '(' param_list . ')' decl_func_list command_block  (24)
	func : types identifier '(' param_list . ')' command_block  (26)

	')'  shift 41
	.  error


state 31
	param_list : types . identifier ',' param_list  (28)
	param_list : types . identifier  (29)

	TK_IDENTIFIER  shift 14
	.  error

	identifier  goto 42


state 32
	pointer_decl : types '$' identifier ':' literals . ';'  (23)

	';'  shift 43
	.  error


state 33
	simple_decl : types identifier ':' literals ';' .  (9)

	.  reduce 9


state 34
	array_decl : types identifier '[' LIT_INTEGER ']' . ';'  (19)
	array_decl : types identifier '[' LIT_INTEGER ']' . ':' lit_list ';'  (20)

	':'  shift 44
	';'  shift 45
	.  error


state 35
	command_block : '{' . command_list '}'  (34)
	command_list : .  (36)

	KW_IF  shift 46
	KW_LOOP  shift 47
	KW_INPUT  shift 48
	KW_RETURN  shift 49
	KW_OUTPUT  shift 50
	TK_IDENTIFIER  shift 14
	'{'  shift 35
	'}'  reduce 36

	command  goto 51
	command_list  goto 52
	command_block  goto 53
	identifier  goto 54


state 36
	decl_func_list : simple_decl . decl_func_list  (30)
	decl_func_list : simple_decl .  (32)

	KW_WORD  shift 1
	KW_BOOL  shift 2
	KW_BYTE  shift 3
	'{'  reduce 32

	simple_decl  goto 36
	pointer_decl  goto 37
	decl_func_list  goto 55
	types  goto 40


state 37
	decl_func_list : pointer_decl . decl_func_list  (31)
	decl_func_list : pointer_decl .  (33)

	KW_WORD  shift 1
	KW_BOOL  shift 2
	KW_BYTE  shift 3
	'{'  reduce 33

	simple_decl  goto 36
	pointer_decl  goto 37
	decl_func_list  goto 56
	types  goto 40


state 38
	func : types identifier '(' ')' decl_func_list . command_block  (25)

	'{'  shift 35
	.  error

	command_block  goto 57


state 39
	func : types identifier '(' ')' command_block .  (27)

	.  reduce 27


state 40
	simple_decl : types . identifier ':' literals ';'  (9)
	pointer_decl : types . '$' identifier ':' literals ';'  (23)

	TK_IDENTIFIER  shift 14
	'$'  shift 15
	.  error

	identifier  goto 58


state 41
	func : types identifier '(' param_list ')' . decl_func_list command_block  (24)
	func : types identifier '(' param_list ')' . command_block  (26)

	KW_WORD  shift 1
	KW_BOOL  shift 2
	KW_BYTE  shift 3
	'{'  shift 35
	.  error

	simple_decl  goto 36
	pointer_decl  goto 37
	decl_func_list  goto 59
	command_block  goto 60
	types  goto 40


state 42
	param_list : types identifier . ',' param_list  (28)
	param_list : types identifier .  (29)

	','  shift 61
	')'  reduce 29


state 43
	pointer_decl : types '$' identifier ':' literals ';' .  (23)

	.  reduce 23


state 44
	array_decl : types identifier '[' LIT_INTEGER ']' ':' . lit_list ';'  (20)

	LIT_INTEGER  shift 22
	LIT_FALSE  shift 23
	LIT_TRUE  shift 24
	LIT_CHAR  shift 25
	LIT_STRING  shift 26
	.  error

	lit_list  goto 62
	literals  goto 63


state 45
	array_decl : types identifier '[' LIT_INTEGER ']' ';' .  (19)

	.  reduce 19


state 46
	command : KW_IF . '(' exp ')' KW_THEN command  (39)
	command : KW_IF . '(' exp ')' KW_THEN command KW_ELSE command  (40)

	'('  shift 64
	.  error


state 47
	command : KW_LOOP . '(' exp ')' command  (41)

	'('  shift 65
	.  error


state 48
	command : KW_INPUT . identifier  (42)

	TK_IDENTIFIER  shift 14
	.  error

	identifier  goto 66


state 49
	command : KW_RETURN . exp  (44)

	TK_IDENTIFIER  shift 14
	LIT_INTEGER  shift 22
	LIT_FALSE  shift 23
	LIT_TRUE  shift 24
	LIT_CHAR  shift 25
	LIT_STRING  shift 26
	'-'  shift 67
	'*'  shift 68
	'&'  shift 69
	'('  shift 70
	.  error

	exp  goto 71
	exp_arit  goto 72
	exp_logic  goto 73
	func_call  goto 74
	literals  goto 75
	identifier  goto 76


state 50
	command : KW_OUTPUT . output_list  (43)

	TK_IDENTIFIER  shift 14
	LIT_INTEGER  shift 22
	LIT_FALSE  shift 23
	LIT_TRUE  shift 24
	LIT_CHAR  shift 25
	LIT_STRING  shift 26
	'-'  shift 67
	'*'  shift 68
	'&'  shift 69
	'('  shift 70
	.  error

	exp  goto 77
	exp_arit  goto 78
	exp_logic  goto 73
	func_call  goto 74
	output_list  goto 79
	literals  goto 75
	identifier  goto 76


state 51
	command_list : command . ';' command_list  (35)

	';'  shift 80
	.  error


state 52
	command_block : '{' command_list . '}'  (34)

	'}'  shift 81
	.  error


state 53
	command : command_block .  (45)

	.  reduce 45


state 54
	command : identifier . '=' exp  (37)
	command : identifier . '[' LIT_INTEGER ']' '=' exp  (38)

	'['  shift 82
	'='  shift 83
	.  error


state 55
	decl_func_list : simple_decl decl_func_list .  (30)

	.  reduce 30


state 56
	decl_func_list : pointer_decl decl_func_list .  (31)

	.  reduce 31


state 57
	func : types identifier '(' ')' decl_func_list command_block .  (25)

	.  reduce 25


state 58
	simple_decl : types identifier . ':' literals ';'  (9)

	':'  shift 18
	.  error


state 59
	func : types identifier '(' param_list ')' decl_func_list . command_block  (24)

	'{'  shift 35
	.  error

	command_block  goto 84


state 60
	func : types identifier '(' param_list ')' command_block .  (26)

	.  reduce 26


state 61
	param_list : types identifier ',' . param_list  (28)

	KW_WORD  shift 1
	KW_BOOL  shift 2
	KW_BYTE  shift 3
	.  error

	param_list  goto 85
	types  goto 31


state 62
	array_decl : types identifier '[' LIT_INTEGER ']' ':' lit_list . ';'  (20)

	';'  shift 86
	.  error


state 63
	lit_list : literals . lit_list  (21)
	lit_list : literals .  (22)

	LIT_INTEGER  shift 22
	LIT_FALSE  shift 23
	LIT_TRUE  shift 24
	LIT_CHAR  shift 25
	LIT_STRING  shift 26
	';'  reduce 22

	lit_list  goto 87
	literals  goto 63


state 64
	command : KW_IF '(' . exp ')' KW_THEN command  (39)
	command : KW_IF '(' . exp ')' KW_THEN command KW_ELSE command  (40)

	TK_IDENTIFIER  shift 14
	LIT_INTEGER  shift 22
	LIT_FALSE  shift 23
	LIT_TRUE  shift 24
	LIT_CHAR  shift 25
	LIT_STRING  shift 26
	'-'  shift 67
	'*'  shift 68
	'&'  shift 69
	'('  shift 70
	.  error

	exp  goto 88
	exp_arit  goto 72
	exp_logic  goto 73
	func_call  goto 74
	literals  goto 75
	identifier  goto 76


state 65
	command : KW_LOOP '(' . exp ')' command  (41)

	TK_IDENTIFIER  shift 14
	LIT_INTEGER  shift 22
	LIT_FALSE  shift 23
	LIT_TRUE  shift 24
	LIT_CHAR  shift 25
	LIT_STRING  shift 26
	'-'  shift 67
	'*'  shift 68
	'&'  shift 69
	'('  shift 70
	.  error

	exp  goto 89
	exp_arit  goto 72
	exp_logic  goto 73
	func_call  goto 74
	literals  goto 75
	identifier  goto 76


state 66
	command : KW_INPUT identifier .  (42)

	.  reduce 42


state 67
	exp : '-' . exp  (55)

	TK_IDENTIFIER  shift 14
	LIT_INTEGER  shift 22
	LIT_FALSE  shift 23
	LIT_TRUE  shift 24
	LIT_CHAR  shift 25
	LIT_STRING  shift 26
	'-'  shift 67
	'*'  shift 68
	'&'  shift 69
	'('  shift 70
	.  error

	exp  goto 90
	exp_arit  goto 72
	exp_logic  goto 73
	func_call  goto 74
	literals  goto 75
	identifier  goto 76


state 68
	exp : '*' . exp  (56)

	TK_IDENTIFIER  shift 14
	LIT_INTEGER  shift 22
	LIT_FALSE  shift 23
	LIT_TRUE  shift 24
	LIT_CHAR  shift 25
	LIT_STRING  shift 26
	'-'  shift 67
	'*'  shift 68
	'&'  shift 69
	'('  shift 70
	.  error

	exp  goto 91
	exp_arit  goto 72
	exp_logic  goto 73
	func_call  goto 74
	literals  goto 75
	identifier  goto 76


state 69
	exp : '&' . exp  (57)

	TK_IDENTIFIER  shift 14
	LIT_INTEGER  shift 22
	LIT_FALSE  shift 23
	LIT_TRUE  shift 24
	LIT_CHAR  shift 25
	LIT_STRING  shift 26
	'-'  shift 67
	'*'  shift 68
	'&'  shift 69
	'('  shift 70
	.  error

	exp  goto 92
	exp_arit  goto 72
	exp_logic  goto 73
	func_call  goto 74
	literals  goto 75
	identifier  goto 76


state 70
	exp : '(' . exp ')'  (58)
